GUI-related code: Overhaul & optimizations
- Improve performance of searchables
- IconFactory: Load FA font only once (and not _every_ time a icon is made)
- Use Flatlaf more effectively
- Improvements to Allen Navigator, PathManagerUI, MeasureUI, and BookmarkManager
- Code cleanup